--- a/unit_6/public/css/style.css
+++ b/unit_6/public/css/style.css
@@ -1,4 +1,22 @@
 * {
     font-family: sans-serif;
     text-align: center;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+body {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+.flex {
+    width: 1200px;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+.img {
+    margin: 20px;
+    border: 2px solid black;
+    border-radius: 10%;
+    padding: 10px;
 }
