--- a/unit_7/views/main.pug
+++ b/unit_7/views/main.pug
@@ -3,3 +3,9 @@ include header.pug
 h2 my App    
 p #{foo}
 h4 #{tata}
+
+each val, index in goods
+    p #{val['name']}
+    img(
+        src='images/'+val['image'] 
+    )
