--- a/unit_8/views/main.pug
+++ b/unit_8/views/main.pug
@@ -1,16 +1,16 @@
-//- include goods
-include header 
+include goods
+//- include header 
 
-div(class='wrap')
-  div(class='content')
-    header(class='site-header')
-      include site_header
-    div(class='container')
-      div(class='row')
-        div(class='col col-md-12')
-          a(href="/cat") 
-            button(
-              class="button-success add-to-cart"
-            ) Category
+//- div(class='wrap')
+//-   div(class='content')
+//-     header(class='site-header')
+//-       include site_header
+//-     div(class='container')
+//-       div(class='row')
+//-         div(class='col col-md-12')
+//-           a(href="/cat") 
+//-             button(
+//-               class="button-success add-to-cart"
+//-             ) Category
     
 
