--- a/unit_8/views/goods.pug
+++ b/unit_8/views/goods.pug
@@ -16,7 +16,7 @@ div(class='wrap')
             )
         div(class="col col-md-8")
             p #{goods['description']}
-            span(class="success") Цена: #{goods['cost'].toFixed(2).replace(/\d(?=(\d{3})+\.)/g, '$& ')} uah
+            //- span(class="success") Цена: #{goods['cost'].toFixed(2).replace(/\d(?=(\d{3})+\.)/g, '$& ')} uah
             button(
                 class="button-success add-to-cart"
                 data-goods_id=goods['id']
