--- a/unit_8/views/main.pug
+++ b/unit_8/views/main.pug
@@ -1,4 +1,5 @@
 include goods
+//- h1 Hello
 //- include header 
 
 //- div(class='wrap')
@@ -7,10 +8,6 @@ include goods
 //-       include site_header
 //-     div(class='container')
 //-       div(class='row')
-//-         div(class='col col-md-12')
-//-           a(href="/cat") 
-//-             button(
-//-               class="button-success add-to-cart"
-//-             ) Category
+        //- include cat
     
 
