--- a/unit_8/views/cat.pug
+++ b/unit_8/views/cat.pug
@@ -8,11 +8,11 @@ div(class='wrap')
     div(class='container')
       div(class='row')
         div(class='col col-md-12')
-          h2 #{cat[0]['category']}
+          h2 #{cat['category']}
         each val, index in goods
           include card.pug
                   
 
 
 
-        div #{cat[0]['description']}
+        div #{cat['description']}
