--- a/unit_8/views/goods.pug
+++ b/unit_8/views/goods.pug
@@ -8,17 +8,17 @@ div(class='wrap')
     div(class='container')
       div(class='row')
         div(class='col col-md-12')
-            h2(class="panel-title") #{goods['name']}
+            h2(class="panel-title") #{goods[0]['name']}
         div(class="col col-md-4")
             img(
-                src="images/"+goods['image']
+                src="images/"+goods[0]['image']
                 class="goods-big-image"
             )
         div(class="col col-md-8")
-            p #{goods['description']}
-            //- span(class="success") Цена: #{goods['cost'].toFixed(2).replace(/\d(?=(\d{3})+\.)/g, '$& ')} uah
+            p #{goods[0]['description']}
+            span(class="success") Цена: #{goods[0]['cost'].toFixed(2).replace(/\d(?=(\d{3})+\.)/g, '$& ')} uah
             button(
                 class="button-success add-to-cart"
-                data-goods_id=goods['id']
+                data-goods_id=goods[0]['id']
             ) to cart
 
