--- a/unit_8/views/main.pug
+++ b/unit_8/views/main.pug
@@ -1,6 +1,6 @@
-include goods
-//- h1 Hello
-//- include header 
+//- include goods
+h1 Hello
+include header 
 
 //- div(class='wrap')
 //-   div(class='content')
