--- a/unit_8/views/header.pug
+++ b/unit_8/views/header.pug
@@ -13,9 +13,11 @@ html
           rel='stylesheet'
           href='css/mustard-ui.min.css'
         )
+        <script src="https://kit.fontawesome.com/5e93c92627.js" crossorigin="anonymous"></script>
         link(
           rel='stylesheet'
           href='css/style.css'
         )
+        
         title Lite Shop
     body
