--- a/unit_8/views/cat.pug
+++ b/unit_8/views/cat.pug
@@ -15,7 +15,7 @@ div(class='wrap')
 
 
 
-        div #{cat['description']}
+        div #{cat[0]['description']}
 
     include nav
   include footer
