--- a/unit_8/views/footer.pug
+++ b/unit_8/views/footer.pug
@@ -4,3 +4,4 @@ div(class="footer")
             div(class="col col-lg-12") Lite Shop. All Rights Reserved
 
 script(src="js/nav.js")
+script(src="js/card.js")
