--- a/unit_8/views/admin-order.pug
+++ b/unit_8/views/admin-order.pug
@@ -1,4 +1,26 @@
 h1 Admin-panel 
 h2 Order-information
-each val, index in order
- p #{val['id']}
+table
+ tr
+  th id
+  th date
+  th userId
+  th goodsId
+  th goods Cost
+  th goods Amount
+  th Total
+  th User
+  th Phone
+  th Address
+ each val, index in order
+  tr
+   td #{val['id']}
+   td #{val['human_date']}
+   td #{val['user_id']}
+   td #{val['goods_id']}
+   td #{val['goods_cost'].toFixed(2).replace(/\d(?=(\d{3})+\.)/g, '$& ')} uah
+   td #{val['goods_amount']}
+   td #{val['total'].toFixed(2).replace(/\d(?=(\d{3})+\.)/g, '$& ')} uah
+   td #{val['user']}
+   td #{val['phone']}
+   td #{val['address']}
