--- a/unit_8/views/login.pug
+++ b/unit_8/views/login.pug
@@ -1,8 +1,8 @@
-form(action="/admin", method="POST") 
+form(action="/login", method="POST") 
     label Login
     input(name="login", placeholder="login", value="admin", id="login")
     label Password
     input(type="password", name="password", placeholder="password", value="123", id="password")
     input(type="submit", value="login")
 
-script(src="js/login.js")
+//- script(src="js/login.js")
