--- a/unit_8/views/admin-order.pug
+++ b/unit_8/views/admin-order.pug
@@ -1,11 +1,16 @@
+link(
+    rel='stylesheet'
+    href='css/style.css'
+    )
+
 h1 Admin-panel 
 h2 Order-information
-table
+table(class="admin")
  tr
   th id
   th date
-  th userId
-  th goodsId
+  th user_Id
+  th goods_Id
   th goods Cost
   th goods Amount
   th Total
