--- a/unit_8/views/footer.pug
+++ b/unit_8/views/footer.pug
@@ -4,5 +4,5 @@ div(class="footer")
             div(class="col col-lg-12") Lite Shop. All Rights Reserved
 
 script(src="https://cdn.jsdelivr.net/npm/sweetalert2@11")
-script(src="js/nav.js")
-script(src="js/card.js")
+script(src="/js/nav.js")
+script(src="/js/card.js")
