--- a/unit_8/views/header.pug
+++ b/unit_8/views/header.pug
@@ -11,12 +11,12 @@ html
         )
         link(
           rel='stylesheet'
-          href='css/mustard-ui.min.css'
+          href='/css/mustard-ui.min.css'
         )
         <script src="https://kit.fontawesome.com/5e93c92627.js" crossorigin="anonymous"></script>
         link(
           rel='stylesheet'
-          href='css/style.css'
+          href='/css/style.css'
         )
         
         title Lite Shop
