--- a/unit_8/views/goods.pug
+++ b/unit_8/views/goods.pug
@@ -14,6 +14,13 @@ div(class='wrap')
                 src="/images/"+goods[0]['image']
                 class="goods-big-image"
             )
+            div(class='row')
+              div(class="col col-md-6")
+                img(
+                  src="/images/"+goods[0]['image']
+                  class="goods-big-image"
+                )
+
         div(class="col col-md-8")
             p #{goods[0]['description']}
             span(class="success") Цена: #{goods[0]['cost'].toFixed(2).replace(/\d(?=(\d{3})+\.)/g, '$& ')} uah
